<resources>
    <string name="app_name">Movie Monster</string>
    <string name="about_title">About this app</string>
    <string name="tmdb_attribution">Movie data generously provided by The Movie DB</string>
    <string name="material_icon_attribution">Material Design Icons provided free of charge under Apache License
    version 2.0 https://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="movie_db_name">The Movie DB</string>
    <string name="material_design_library_name">Google Material Design Icon Library</string>
    <string name="attribution_title">Attributions</string>
    <string name="about_text">Movie Moster displays a list of the twenty most popular movies as
        determined by The Movie DB (TMDB). The movies are displayed by popularity from most to least popular. For each movie, the title, poster,
        overview, and genre (first listing only) are displayed. Volley is used to request and retrieve the data from
        TMDB web api. GSON is used to parse the movie data. Glide is used for image management.</string>
    <string name="movie_db_logo_content_description">The Movie DB logo</string>
    <string name="movie_poster_content_desc">movie poster</string>
    <string name="list_empty_error">The movie list is empty. Please try again later</string>
    <string name="connection_error">There was a connection error</string>
    <string name="expanded_image_content_description">Expanded Image</string>
</resources>
