<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/screen_margin"
        tools:context=".AboutActivity">

    <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="@dimen/section_padding"
            android:text="@string/about_text"/>

    <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            app:layout_constraintTop_toBottomOf="@+id/about_text"
            android:background="@color/light_grey"/>

    <TextView
            android:id="@+id/attribution_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attribution_title"
            android:paddingTop="@dimen/section_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:textSize="@dimen/title_text"/>

    <TextView
            android:id="@+id/tmdb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_db_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attribution_title"
            android:textSize="@dimen/subtitle_text"/>

    <TextView
            android:id="@+id/tmdb_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/element_padding"
            app:layout_constraintTop_toBottomOf="@id/tmdb_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/tmdb_attribution"/>

    <ImageView android:id="@+id/tmdb_image"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@id/tmdb_attribution"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:padding="@dimen/element_padding"
               android:src="@drawable/ic_tmdb_square_blue"
               android:contentDescription="@string/movie_db_logo_content_description"/>

    <TextView
            android:id="@+id/material_icon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_design_library_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tmdb_image"
            android:textSize="@dimen/subtitle_text"/>

    <TextView
            android:id="@+id/icon_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/material_icon_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/material_icon_attribution"/>

</android.support.constraint.ConstraintLayout>